--- a/index.html
+++ b/index.html
@@ -21,29 +21,42 @@
 		
 		<div class="spacer"></div>
 		
-		<div class="splash"></div>
+		<div class="splash"><h1>Oscar</h1></div>
 		
 		<div class="spacer"></div>
 		
 		<div class="info">
 			<div class="horizontal">
 				<div class="text-left">
+					<p>
+					Hello.<br><br>
+					I am Oscar Foy, a high school student<br>
+					aspiring to be a Computer Scientist.<br>
+					I love to program (this entire website was made by me),<br>
+					whether it be firmware or a computer application.
+					</p>
 				</div>
+				<div class="middle-column gradient-right"></div>
 				<div class="image-right">
+					<img src="./img/splash.jpg">
 				</div>
 			</div>
-			
 			<div class="horizontal">
 				<div class="image-left">
+					<img src="./img/splash.jpg">
 				</div>
+				<div class="middle-column gradient-left"></div>
 				<div class="text-right">
+					<p>
+					Feel free to have a look around,<br>
+					this website has my portfolio and contact information.<br>
+					My portfolio should be updated every once and awhile with<br>
+					new projects.<br>
+					I hope to hear from you.
+					</p>
 				</div>
 			</div>
 		</div>
 		
-		<div class="spacer"></div>
-		
-		<div class="footer">
-		</div>
 	</body>
 </html>
