--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		
 		<div class="spacer"></div>
 		
-		<div class="splash"><h1>Oscar</h1></div>
+		<div class="splash"><h1>Home</h1></div>
 		
 		<div class="spacer"></div>
 		
