--- a/projects/cobf.html
+++ b/projects/cobf.html
@@ -2,6 +2,9 @@
 	</body>
 		<script type="text/javascript" src="./scripts/cobf.js"></script>
 		
+		<h3>Curve of Best fit Calculator</h1>
+		<h4>(You might have to put the values in the opposite boxes for the output to be correct)</h4>
+		
 		<canvas id="graph" width="500" height="500" style="border:1px solid #000000;"></canvas>
 		
 		<h4>X values</h4>
