--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,18 @@
 		<div class="spacer"></div>
 		
 		<div class="portfolio-container">
-			<div class="portfolio portfolio-python">
-				<code>
-					
-				</code>
+			<div class="portfolio-section">
+				<h2>Misc. Projects</h2>
+				<div class="portfolio-entry">
+					<h3>Programming Resources</h3>
+					<a href="projects/prog-resources.html"><span></span></a>
+				</div>
+				<div class="portfolio-entry">
+					<h3>Curve of Best Fit Calc</h3>
+					<a href="projects/cobf.html"><span></span></a>
+				</div>
 			</div>
+			
 		</div>
 	</body>
 </html>
