--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="nav">
 			<li><a href="#" class="current">Home</a></li>
 			<li><a href="#">About</a></li>
-			<li><a href="#">Portfolio</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
 			<li><a href="#">Contact</a></li>
 		</div>
 		
