--- a/index.html
+++ b/index.html
@@ -1,62 +1,53 @@
-
 <html>
 	<head>
-		<link rel="stylesheet" href="./css/style.css">
-		
+		<link rel="stylesheet "href="css/style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet"> 
-		
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Unica+One&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div class="nav">
-			<li><a href="#" class="current">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="#">Contact</a></li>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div class="spacer"></div>
+		<div class="splash">
+		<img src="./img/logo.png">
 		</div>
 		
-		<div class="spacer"></div>
-		
-		<div class="splash"><h1>Home</h1></div>
-		
-		<div class="spacer"></div>
-		
-		<div class="info">
-			<div class="horizontal">
-				<div class="text-left">
+		<div class="body">
+			<div class="spacer"></div>
+			<div class="body-row">
+				<div class="body one">
 					<p>
-					Hello.<br><br>
-					I am Oscar Foy, a high school student<br>
-					aspiring to be a Computer Scientist.<br>
-					I love to program (this entire website was made by me),<br>
-					whether it be firmware or a computer application.
+					&nbsp&nbsp&nbsp&nbsp&nbspI am Oscar Foy,
+					an aspiring programmer looking to explore the world of computers;
+					computer graphics and rendering have been my two focuses lately,
+					but there are some other topics I am interested in as well.
+					<br>
+					<br>
+					&nbsp&nbsp&nbsp&nbsp&nbspI have created this website from scratch using HTML and CSS.
+					Feel free to test things, and if you find a bug, no problem, it's an opportunity to learn.
+					Just submit an issue on the <a href="">GitHub page</a> and I'll get to it when I can.
 					</p>
 				</div>
-				<div class="middle-column gradient-right"></div>
-				<div class="image-right">
-					<img src="./img/splash.jpg">
+				<div class="body two"></div>
+				<div class="body three"></div>
+			</div>
+			<div class="spacer"></div>
+			<div class="body-row">
+				<div class="body three"></div>
+				<div class="body two"></div>
+				<div class="body one">
+					<p>&nbsp&nbsp&nbsp&nbsp&nbspI am Oscar Foy, an aspiring programmer looking to explore the world of computers.</p>
 				</div>
 			</div>
-			<div class="horizontal">
-				<div class="image-left">
-					<img src="./img/splash.jpg">
-				</div>
-				<div class="middle-column gradient-left"></div>
-				<div class="text-right">
-					<p>
-					Feel free to have a look around,<br>
-					this website has my portfolio and contact information.<br>
-					My portfolio should be updated every once and awhile with<br>
-					new projects.<br>
-					I hope to hear from you.
-					</p>
-				</div>
-			</div>
+			<div class="spacer"></div>
 		</div>
-		
+		<div class="footer"></div>
 	</body>
 </html>
