--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<br>
 					&nbsp&nbsp&nbsp&nbsp&nbspI have created this website from scratch using HTML and CSS.
 					Feel free to test things, and if you find a bug, no problem, it's an opportunity to learn.
-					Just submit an issue on the <a href="">GitHub page</a> and I'll get to it when I can.
+					Just submit an issue on the <a href="https://github.com/oscarfoy/oscarfoy.github.io">GitHub page</a> and I'll get to it when I can.
 					</p>
 				</div>
 				<div class="body two"></div>
