--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="nav">
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html" class="active">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 			</ul>
 		</div>
